# iptables-graph

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REFACTOR.md  iptables-graph  iptables-graph.py  iptables-graph.spec  pyproject.toml  requirements.txt
examples/: gcloud.iptables
src/iptables_graph/: __init__.py  __main__.py
