[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iptables-graph"
version = "1.0.0"
description = "Visualize iptables packet flow as Graphviz diagrams"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "sanghaklee", email = "code.ryan.lee@gmail.com"}
]
keywords = ["iptables", "firewall", "visualization", "graphviz", "network", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/SangHakLee/iptables-graph"
Repository = "https://github.com/SangHakLee/iptables-graph"

[project.scripts]
iptables-graph = "iptables_graph:main"

[tool.setuptools]
py-modules = ["iptables_graph"]

[project.optional-dependencies]
# Optional: graphviz Python package (not the system binary)
# This is for users who want SVG/PNG conversion
# Note: Still requires system graphviz package to be installed
graphviz = ["graphviz>=0.20"]

# Development dependencies
dev = [
    "pyinstaller>=5.0",
    "pytest>=7.0",
]
