[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "iptables-graph"
version = "0.1.0"  # Managed by semantic-release
description = "Visualize iptables packet flow as Graphviz diagrams"
authors = ["sanghaklee <code.ryan.lee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SangHakLee/iptables-graph"
repository = "https://github.com/SangHakLee/iptables-graph"
keywords = ["iptables", "firewall", "visualization", "graphviz", "network", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
packages = [{include = "iptables_graph", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=5.0"
pytest = ">=7.0"
python-semantic-release = "^8.0.0"

[tool.poetry.scripts]
iptables-graph = "iptables_graph.__main__:main"

# ============================================================================
# Semantic Release Configuration
# ============================================================================
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "python -m build"
commit_message = "chore(release): {version}\n\n🤖 Generated with semantic-release"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "docs",
    "style",
    "refactor",
    "perf",
    "test",
    "build",
    "ci",
    "chore"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
